Create material card

--- a/documentation/feeedback_notes/23_9_24.md
+++ b/documentation/feeedback_notes/23_9_24.md
@@ -1,9 +1,9 @@
-Player model height wrong
-Desynced players
-Network issues for starting game
-Too slow player
-floaty jump
-Add fullscreen
-Increace base bullet speed
-flatter terrain
-nerf 1 shots
+- Player model height wrong
+- Desynced players
+- Network issues for starting game
+- Too slow player
+- floaty jump
+- Add fullscreen
+- Increace base bullet speed
+- flatter terrain
+- nerf 1 shots
